TLS v1.3 Adds "runningMode" property to registration example - #1027

--- a/src/tls1.3/sections/05-capabilities.adoc
+++ b/src/tls1.3/sections/05-capabilities.adoc
@@ -38,7 +38,7 @@ The following hash functions *MAY* be advertised by an ACVP compliant client und
 [#valid-runningMode]
 ==== Valid Running Modes
 
-The following hash functions *MAY* be advertised by an ACVP compliant client under the 'runningMode' property
+The KDF modes *MAY* be advertised by an ACVP compliant client under the 'runningMode' property
 
 * PSK
 * DHE
@@ -65,6 +65,9 @@ An example registration within an algorithm capability exchange looks like this
     "SHA3-256",
     "SHA3-384",
     "SHA3-512"
+  ],
+  "runningMode": [
+    "PSK-DHE"
   ]
 }
 ----
