KAS-ECC SP800-56Ar3 Removes curves that are not valid from the registration capabilities - #1026

--- a/src/kas/sp800-56ar3/ecc/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56ar3/ecc/sections/05-capabilities.adoc
@@ -32,7 +32,7 @@ Each algorithm capability advertised is a self-contained JSON object using the f
 | function| Type of function supported| array| See <<supported_functions>>| Yes
 | iutId| The identifier of the IUT.| hex|  | No 
 | scheme| Array of supported key agreement schemes each having their own capabilities| object| See <<supported_schemes>>| No
-| domainParameterGen| Array of IUT supported domain paameter generation methods. | array | P-192, P-224, P-256, P-384, P-521, K-163, K-233, K-283, K-409, K-571, B-163, B-233, B-283, B-409, B-571| No
+| domainParameterGenerationMethods| Array of IUT supported domain parameter generation methods. | array | P-224, P-256, P-384, P-521, K-233, K-283, K-409, K-571, B-233, B-283, B-409, B-571| No
 |===
 
 Note: Some optional values are *REQUIRED* depending on the algorithm. Failure to provide these values will result in the ACVP server returning an error to the ACVP client during registration.
@@ -391,7 +391,7 @@ The following is a example JSON object advertising support for KAS ECC.
     }
   },
   "domainParameterGenerationMethods": [
-    "P-192"
+    "P-224"
   ]
 }    
 ----
