--- a/src/kas/sp800-56ar3/ffc/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56ar3/ffc/sections/05-capabilities.adoc
@@ -31,7 +31,7 @@ Each algorithm capability advertised is a self-contained JSON object using the f
 | function| Type of function supported| array| See <<supported_functions>>| Yes
 | iutId| The identifier of the IUT.| hex|  | No 
 | scheme| Array of supported key agreement schemes each having their own capabilities| object| See <<supported_schemes>>| No
-| domainParameterGen| Array of IUT supported domain paameter generation methods.  Note that "FB" and "FC" are considered legacy, and should only be included for interoperability with othe systems unable to support the safe prime groups.| array | MODP-2048, MODP-3072, MODP-4096, MODP-6144, MODP-8192, ffdhe2048, ffdhe3072, ffdhe4096, ffdhe6144, ffdhe8192, FB, FC| No
+| domainParameterGenerationMethods| Array of IUT supported domain parameter generation methods.  Note that "FB" and "FC" are considered legacy, and should only be included for interoperability with other systems unable to support the safe prime groups.| array | MODP-2048, MODP-3072, MODP-4096, MODP-6144, MODP-8192, ffdhe2048, ffdhe3072, ffdhe4096, ffdhe6144, ffdhe8192, FB, FC| No
 |===
 
 Note: Some optional values are *REQUIRED* depending on the algorithm. Failure to provide these values will result in the ACVP server returning an error to the ACVP client during registration.
