KAS 1.0 - Adds dkmNonceTypes property under KDF properties - #1025

--- a/src/kas/sp800-56ar2/ffc/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56ar2/ffc/sections/05-capabilities.adoc
@@ -123,6 +123,7 @@ Contains properties *REQUIRED* for "kdfNoKc" registration.
 | JSON Value| Description| JSON type| Valid Values| Optional
 
 | kdfOption| The kdf options for "kdfNoKc"| object| <<supported_kdfOption>>| No
+| dkmNonceTypes | the dkmNonceTypes supported | array of string | randomNonce, timestamp, sequence, timestampSequence | Required for dhStatic scheme
 | parameterSet| The parameterSet options for "kdfNoKc"| object| <<parameter_set>>| No
 |===
 
