--- a/src/kas/sp800-56ar2/ecc/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56ar2/ecc/sections/05-capabilities.adoc
@@ -124,6 +124,7 @@ Contains properties *REQUIRED* for "kdfNoKc" registration.
 | JSON Value| Description| JSON type| Valid Values| Optional
 
 | kdfOption| The kdf options for "kdfNoKc"| object| <<supported_kdfOption>>| No
+| dkmNonceTypes | the dkmNonceTypes supported | array of string | randomNonce, timestamp, sequence, timestampSequence | Required for staticUnified scheme
 | parameterSet| The parameterSet options for "kdfNoKc"| object| <<parameter_set>>| No
 |===
 
