TLS v1.3 Adds additional derived secret checking in validation process - to ensure coverage of all random values provided in the KDF negotiation (helloClientRandom, helloServerRandom,  finishedClientRandom, and finishedServerRandom)

--- a/src/tls1.3/sections/07-responses.adoc
+++ b/src/tls1.3/sections/07-responses.adoc
@@ -53,7 +53,18 @@ The following table describes the JSON object that represents a test case respon
 | JSON Property | Description | JSON Type
 
 | tcId | The test case identifier | integer
-| exporterMasterSecret | The exporter master secret | hex
+
+
+| clientEarlyTrafficSecret | The client early traffic secret. `Derive-Secret(., "c e traffic", ClientHello)` | hex
+| serverEarlyTrafficSecret | The server early traffic secret. `Derive-Secret(., "s e traffic", ClientHello)` | hex
+
+| clientHandshakeTrafficSecret | The client handshake traffic secret. `Derive-Secret(., "c hs traffic", ClientHello...ServerHello)` | hex
+| serverHandshakeTrafficSecret | The server handshake traffic secret. `Derive-Secret(., "s hs traffic", ClientHello...ServerHello)` | hex
+
+| clientApplicationTrafficSecret | The client application traffic secret. `Derive-Secret(., "c ap traffic", ClientHello...server Finished)` | hex
+| serverApplicationTrafficSecret | The server application traffic secret. `Derive-Secret(., "s ap traffic", ClientHello...server Finished)` | hex
+| exporterMasterSecret | The exporter master secret. `Derive-Secret(., "exp master", ClientHello...server Finished)` | hex
+| resumptionMasterSecret | The resumption master secret. `Derive-Secret(., "res master", ClientHello...client Finished)` | hex
 |===
 
 Here is an abbreviated example of the response
@@ -67,7 +78,14 @@ Here is an abbreviated example of the response
     "tgId": 1,
     "tests": [{
       "tcId": 1,
-      "exporterMasterSecret": "003E94E1A4D00FFF353C953FF881564489F1C313"
+      "clientEarlyTrafficSecret": "835F4FB2AFC25D9350B96C3D631602426D106ECA",
+      "earlyExporterTrafficSecret": "6CFDB000082476DD6D431093654647EEB97AE664",
+      "clientHandshakeTrafficSecret": "227B6193F393BFC19A9CC1526075A91C485B6721",
+      "serverHandshakeTrafficSecret": "31FE3A324D43FF49762865628D2F209FA207B1CF",
+      "clientApplicationTrafficSecret": "CA03DF8EB2B8834769785EC3AD6EC2087611AB58",
+      "serverApplicationTrafficSecret": "D009336731692875D706125A0DAA56EBD4FAFAFB",
+      "exporterMasterSecret": "5AFC50B31A857107724EF9B2D09E3AEC6D5DACCA",
+      "resumptionMasterSecret": "F28FA08E096BC8C37AB91AB5A1E7083A3976B9D2"
     }]
   }]
 }
