Corrects algorithm name, adds test type to sample

--- a/src/tls1.3/sections/06-test-vectors.adoc
+++ b/src/tls1.3/sections/06-test-vectors.adoc
@@ -43,12 +43,13 @@ Here is an abbreviated yet fully constructed example of the prompt.
 ----
 {
     "vsId": 1,
-    "algorithm": "TLS-v1.13",
+    "algorithm": "TLS-v1.3",
     "mode": "KDF",
     "revision": "RFC8446",
     "testGroups": [
         {
             "tgId": 1,
+            "testType": "AFT",
             "hmacAlg": "SHA-1",
             "runningMode": "PSK-DHE",
             "tests": [{
