TLS v1.3 Limits hash algorithms to the ones specified in the RFC - https://tools.ietf.org/html/rfc8446#appendix-B.4

--- a/src/tls1.3/sections/06-test-vectors.adoc
+++ b/src/tls1.3/sections/06-test-vectors.adoc
@@ -50,16 +50,16 @@ Here is an abbreviated yet fully constructed example of the prompt.
         {
             "tgId": 1,
             "testType": "AFT",
-            "hmacAlg": "SHA-1",
+            "hmacAlg": "SHA2-256",
             "runningMode": "PSK-DHE",
             "tests": [{
                 "tcId": 1,
-                "psk": "1D2B2CDB0AF344C37B891FAA8602FEC44A51290190D1BE5DAA1FA53AAAE47D29",
-                "dhe": "31CE15B1F6E768F40A0BA5A5A263CC392276AD93DB5C2281BBA0CDB3AE11A64F",
-                "helloClientRandom": "6B09A9E64BB9069AAA7889C90FD1D1CD15E8AEC28805465EF696A3185B40B492",
-                "helloServerRandom": "B4104BE911C0963C0868BF43E028D1804647839F5E446C3595091B6DDE482A53",
-                "finishedClientRandom": "EAACF85BD6A23FC29428298114CA73BF170A19455CD93BC7B2A809659735993D",
-                "finishedServerRandom": "CF56D16625D5A0711332FB817652A88B22C30BE50718762977E1AF4E06218F5C"
+                "psk": "AFCD61C51C5451034B6D8A34B310BDB6C824118989F3954E3CCAF881F8AC8A72",
+                "dhe": "EC77ADA430F5601DE78569A56A787B5EA328444EBE9B2FC6FA06E0E64EBCFED3",
+                "helloClientRandom": "1856D5EA8531D479690A63E94ABDB128BEFDAEEF04ED15B7D5E2D5558BB543C8",
+                "helloServerRandom": "E1EB5CA480114B3964022DEFF30737636EF8807C8FB2A298894D9D8F0AF6AFB8",
+                "finishedClientRandom": "3CE4CD8B44D091AC8A2862CDB322C3DCF9ED7AB047B134638B2FF2B83F4CD4BF",
+                "finishedServerRandom": "96FFEA222693C2AB5C13373AE1A4185DBFB4BB7BBB8F7C0870B5B833A8CFD1B7"
             }]
         }
     ]
