KAS KDF Additional KdfConfig/KdfParam information around `l` * https://github.com/usnistgov/ACVP/issues/1048

--- a/src/kas/sp800-56cr1/hkdf/sections/06-test-vectors.adoc
+++ b/src/kas/sp800-56cr1/hkdf/sections/06-test-vectors.adoc
@@ -29,6 +29,7 @@ Describes the KDF configuration for use under the test group.
 | fixedInfoPattern| The pattern used for constructing the fixedInfo. | value - See <<fixedinfopatcon>>.
 | fixedInfoEncoding| The encoding used for constructing the fixedInfo. | value.
 | hmacAlg | The MAC function used in the KDF. | value 
+| l | the bit length of keying material to derive from the KDF | value
 |===
 
 [[testCase]]
@@ -58,9 +59,10 @@ KDF specific options used for the test case.
 
 | kdfType | The type of KDF utilized. | value
 | salt | The salt used for the test case. | value
-| algorithmId | The random "algorithID" used for the test case when applicable to the fixedInfo pattern. | value
+| algorithmId | The random "algorithmId" used for the test case when applicable to the fixedInfo pattern. | value
 | context | The random "context" used for the test case when applicable to the fixedInfo pattern. | value
 | label | The random "label" used for the test case when applicable to the fixedInfo pattern. | value
+| l | the bit length of keying material to derive from the KDF | value
 | z | shared secret z value to be used for the test case. | value
 |===
 
