--- a/src/kas/sp800-56cr1/onestep/sections/06-test-vectors.adoc
+++ b/src/kas/sp800-56cr1/onestep/sections/06-test-vectors.adoc
@@ -29,6 +29,7 @@ Describes the KDF configuration for use under the test group.
 | fixedInfoPattern | The pattern used for constructing the fixedInfo. | value - See <<fixedinfopatcon>>.
 | fixedInfoEncoding | The pattern used for constructing the fixedInfo. | value - See <<fixedinfopatcon>>.
 | auxFunction | The auxiliary function used in the KDF.| value - See <<auxfunc>>.
+| l | the bit length of keying material to derive from the KDF | value
 |===
 
 [[testCase]]
@@ -63,6 +64,7 @@ KDF specific options used for the test case.
 | context | The random "context" used for the test case when applicable to the fixedInfo pattern. | value
 | label | The random "label" used for the test case when applicable to the fixedInfo pattern. | value
 | z | shared secret z value to be used for the test case. | value
+| l | the bit length of keying material to derive from the KDF | value
 |===
 
 [[fixedInfo]]
