--- a/src/kas/sp800-56cr1/twostep/sections/06-test-vectors.adoc
+++ b/src/kas/sp800-56cr1/twostep/sections/06-test-vectors.adoc
@@ -32,6 +32,7 @@ Describes the KDF configuration for use under the test group.
 | counterLocation| The counter location. | value
 | counterLen| The counter length. | value
 | ivLen| The iv length. | value
+| l | the bit length of keying material to derive from the KDF | value
 |===
 
 [[testCase]]
@@ -66,6 +67,7 @@ KDF specific options used for the test case.
 | context | The random "context" used for the test case when applicable to the fixedInfo pattern. | value
 | label | The random "label" used for the test case when applicable to the fixedInfo pattern. | value
 | z | shared secret z value to be used for the test case. | value
+| l | the bit length of keying material to derive from the KDF | value
 |===
 
 [[fixedInfo]]
