SHA3 2.0 testing information - https://github.com/usnistgov/ACVP/issues/1003

--- a/src/sha3/sections/03-supported.adoc
+++ b/src/sha3/sections/03-supported.adoc
@@ -4,11 +4,15 @@
 
 The following SHA3-based hash algorithms *MAY* be advertised by this ACVP compliant crypto module:
 
-* SHA3-224
-* SHA3-256
-* SHA3-384
-* SHA3-512
-* SHAKE-128
-* SHAKE-256
+* SHA3-224 / null / 1.0
+* SHA3-256 / null / 1.0
+* SHA3-384 / null / 1.0
+* SHA3-512 / null / 1.0
+* SHA3-224 / null / 2.0
+* SHA3-256 / null / 2.0
+* SHA3-384 / null / 2.0
+* SHA3-512 / null / 2.0
+* SHAKE-128 / null / 1.0
+* SHAKE-256 / null / 1.0
 
 Other hash algorithms *MAY* be advertised by the ACVP module elsewhere.
