--- a/src/sha3/sections/05-capabilities.adoc
+++ b/src/sha3/sections/05-capabilities.adoc
@@ -7,7 +7,7 @@ Each SHA3 and SHAKE algorithm capability advertised *SHALL* be a self-contained 
 [[caps_table]]
 
 [cols="<,<,<"]
-.SHA3 and SHAKE Algorithm Capabilities JSON Values
+.SHA3 1.0 and SHAKE 1.0 Algorithm Capabilities JSON Values
 |===
 | JSON Value| Description| JSON type
 
@@ -39,7 +39,7 @@ The following grid outlines which properties are *REQUIRED*, as well as all the 
 | SHAKE-256| true, false| true, false| {"Min": 16, "Max": 65536, "Inc": any}| true, false |
 |===
 
-The following is a example JSON object advertising support for SHA3-256.
+The following is a example JSON object advertising support for SHA3-256 for testing revision 1.0.
 
 [source, json]
 ----
@@ -70,3 +70,33 @@ The following is an example JSON object advertising support for SHAKE-128.
     ]
 }
 ----
+
+[cols="<,<,<"]
+.SHA3 2.0 Algorithm Capabilities JSON Values
+
+|===
+| JSON Value| Description| JSON type
+
+| algorithm| The hash algorithm and mode to be validated.| string
+| revision| The algorithm testing revision to use.| string
+| messageLength | Domain representing the message lengths supported. The current MCT implementation requires that the digest size and 3x the digest size of the registered hash algorithm must be a valid value within the registered domain.
+| performLargeDataTest | Determines if the server should include the large data test group defined in <<LD_test>>. This property is *OPTIONAL*, and shall include the lengths in GiB being tested. Valid options are {1, 2, 4, 8}. | integer array
+|===
+
+NOTE: The lengths provided in the 'performLargeDataTest' property are in gibibytes. 1GiB is equivalent to 2^30 bytes. 
+
+The following is a example JSON object advertising support for SHA3-256 for testing revision 2.0.
+
+[source, json]
+----
+{
+    "algorithm": "SHA3-256",
+    "revision": "1.0",
+    "inBit": true,
+    "inEmpty": true,
+    "messageLength": [{"min": 0, "max": 65536, "increment": 1}],
+    "performLargeDataTest": [1, 2, 4, 8]
+}
+----
+
+NOTE: Since the increment is 1 in the above, and the minimum value within the message length is zero, this is effectively an "inBit" and "inEmpty" registration from the 1.0 revision testing.  If the implementation supports only byte length messages, you could use an increment of 8.
