Missed a data type within the sha3 2.0 revision capabilities table

--- a/src/sha3/sections/05-capabilities.adoc
+++ b/src/sha3/sections/05-capabilities.adoc
@@ -79,7 +79,7 @@ The following is an example JSON object advertising support for SHAKE-128.
 
 | algorithm| The hash algorithm and mode to be validated.| string
 | revision| The algorithm testing revision to use.| string
-| messageLength | Domain representing the message lengths supported. The current MCT implementation requires that the digest size and 3x the digest size of the registered hash algorithm must be a valid value within the registered domain.
+| messageLength | Domain representing the message lengths supported. The current MCT implementation requires that the digest size and 3x the digest size of the registered hash algorithm must be a valid value within the registered domain. | domain
 | performLargeDataTest | Determines if the server should include the large data test group defined in <<LD_test>>. This property is *OPTIONAL*, and shall include the lengths in GiB being tested. Valid options are {1, 2, 4, 8}. | integer array
 |===
 
