--- a/src/tls1.3/sections/07-responses.adoc
+++ b/src/tls1.3/sections/07-responses.adoc
@@ -56,7 +56,7 @@ The following table describes the JSON object that represents a test case respon
 
 
 | clientEarlyTrafficSecret | The client early traffic secret. `Derive-Secret(., "c e traffic", ClientHello)` | hex
-| serverEarlyTrafficSecret | The server early traffic secret. `Derive-Secret(., "s e traffic", ClientHello)` | hex
+| earlyExporterMasterSecret | The early exporter master secret. `Derive-Secret(., "e exp master", ClientHello)` | hex
 
 | clientHandshakeTrafficSecret | The client handshake traffic secret. `Derive-Secret(., "c hs traffic", ClientHello...ServerHello)` | hex
 | serverHandshakeTrafficSecret | The server handshake traffic secret. `Derive-Secret(., "s hs traffic", ClientHello...ServerHello)` | hex
@@ -79,7 +79,7 @@ Here is an abbreviated example of the response
     "tests": [{
       "tcId": 1,
       "clientEarlyTrafficSecret": "889A0D6D2FEE8A4354FC0B46E1D29BD56425D5BF4C392B35611C8396F79A3155",
-      "earlyExporterTrafficSecret": "FB91D4B12909086664C55DDAC27AE05ABE5C6F1A75608CA684D5A4C3060CDC12",
+      "earlyExporterMasterSecret": "FB91D4B12909086664C55DDAC27AE05ABE5C6F1A75608CA684D5A4C3060CDC12",
       "clientHandshakeTrafficSecret": "C029A02F8BA8EA6B1E6C288060A26865CFFA6E9AC5034DB5EC6AB0813E90A3BD",
       "serverHandshakeTrafficSecret": "EE099247305B84196773FADCAA3A9953655FD127921FA4B392FDC3A891F3F28F",
       "clientApplicationTrafficSecret": "FB2CB3F715EC90A396A2241B561F89462E486DCCE294ABA7356B23A7BE6D1199",
