Applying workaround for metanorma document generation * from https://github.com/metanorma/metanorma-cli/issues/189#issuecomment-739839069

--- a/src/common/common-sections/02-conventions.adoc
+++ b/src/common/common-sections/02-conventions.adoc
@@ -1,4 +1,5 @@
 [[conventions]]
+[heading=clause]
 == Terms and Definitions
 
 The key words "*MUST*", "*MUST NOT*", "*REQUIRED*", "*SHALL*", "*SHALL NOT*", "*SHOULD*", "*SHOULD NOT*", "*RECOMMENDED*", "*NOT RECOMMENDED*", "*MAY*", and "*OPTIONAL*" in this document are to be interpreted as described in BCP 14 of <<RFC2119>> and <<RFC8174>> when, and only when, they appear in all capitals, as shown here.
@@ -12,3 +13,5 @@ This document also refers to the following terms and definitions:
 * Test Group: A collection of test cases that share similar properties within a prompt or response
 * Test Vector Set: A collection of test groups under a specific algorithm, mode, and revision
 * Validation: JSON sent from the server to the client that specifies the correctness of the response
+
+{blank}
