[metanorma] convert Terms and Definitions section to proper semantics

--- a/src/common/common-sections/02-conventions.adoc
+++ b/src/common/common-sections/02-conventions.adoc
@@ -1,17 +1,37 @@
 [[conventions]]
-[heading=clause]
-== Terms and Definitions
+== Conventions
+
+[.nonterm]
+=== Notation conventions
 
 The key words "*MUST*", "*MUST NOT*", "*REQUIRED*", "*SHALL*", "*SHALL NOT*", "*SHOULD*", "*SHOULD NOT*", "*RECOMMENDED*", "*NOT RECOMMENDED*", "*MAY*", and "*OPTIONAL*" in this document are to be interpreted as described in BCP 14 of <<RFC2119>> and <<RFC8174>> when, and only when, they appear in all capitals, as shown here.
 
-This document also refers to the following terms and definitions:
+=== Terms and Definitions
 
-* Prompt: JSON sent from the server to the client describing the tests the client performs
-* Registration: The initial request from the client to the server describing the capabilities of one or several algorithm, mode and revision combinations
-* Response: JSON sent from the client to the server in response to the prompt
-* Test Case: An individual unit of work within a prompt or response
-* Test Group: A collection of test cases that share similar properties within a prompt or response
-* Test Vector Set: A collection of test groups under a specific algorithm, mode, and revision
-* Validation: JSON sent from the server to the client that specifies the correctness of the response
+==== Prompt
 
-{blank}
+JSON sent from the server to the client describing the tests the client performs
+
+==== Registration
+
+The initial request from the client to the server describing the capabilities of one or several algorithm, mode and revision combinations
+
+==== Response
+
+JSON sent from the client to the server in response to the prompt
+
+==== Test Case
+
+An individual unit of work within a prompt or response
+
+==== Test Group
+
+A collection of test cases that share similar properties within a prompt or response
+
+==== Test Vector Set
+
+A collection of test groups under a specific algorithm, mode, and revision
+
+==== Validation
+
+JSON sent from the server to the client that specifies the correctness of the response
